--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
 
     <meta charset="utf-8">
@@ -9,39 +10,47 @@
     <meta name="author" content="Alice et Gilles Tabart">
     <meta name="robots" content="index, follow">
     <meta name="keywords" content="théâtre, contemporain, Toulouse, Alice Tabart, spectacle, danse, compagnie, mesdames a">
+
     <title>Compagnie Mesdames A - Théâtre contemporain Toulouse</title>
 
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-    <!-- Custom CSS -->
-    <link href="css/scrolling-nav.css" rel="stylesheet">
-
-  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script> -->
+    <!-- Bootstrap CSS and JS 
+   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"> 
+   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
+   <link href="css/bootstrap.min.css" rel="stylesheet">
 
 
-    <!-- Fonts stuff -->
-    <link rel="stylesheet" href="fonts/font-awesome-4.6.3/css/font-awesome.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 
-    <!-- Scrolling Nav JavaScript -->
-    <script src="js/jquery.easing.min.js"></script>
-    <script src="js/scrolling-nav.js"></script>
+   <!-- Custom CSS -->
+   <link href="css/scrolling-nav.css" rel="stylesheet">
 
-  	 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+   <!-- jQuery -->
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.js"></script>
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> 
+
+ -->
+
+
+ <!-- Fonts stuff -->
+ <link rel="stylesheet" href="fonts/font-awesome-4.6.3/css/font-awesome.min.css">
+ <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+
+
+ <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+ <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--
     <[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <[endif]>
-    -->
+-->
 
 </head>
+
+
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
-<!-- Navigation -->
+    <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header page-scroll">
@@ -59,6 +68,9 @@
                 <ul class="nav navbar-nav">
                     <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                     <li class="hidden">
+                        <a class="page-scroll" href="#page-top"></a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#home">Home</a>
                     </li>
                     <li>
@@ -80,7 +92,7 @@
         <!-- /.container -->
     </nav>
 
-<!-- Home Section -->
+    <!-- Home Section -->
     <section id="home" class="home-section">
         <div class="container">
             <div class="row">
@@ -88,7 +100,7 @@
 
                     <h1>Welcome</h1>
                     <p><strong>Mesdames a</strong> Make sure to include the page-scroll</code> class and set the link target to a corresponding ID on the page.</p>
-                   <!-- <a class="btn btn-default page-scroll" href="#about">Click Me to Scroll Down!</a>-->
+                    <!-- <a class="btn btn-default page-scroll" href="#about">Click Me to Scroll Down!</a>-->
                 </div>
             </div>
         </div>
@@ -110,23 +122,47 @@
     <section id="creations" class="creations-section">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
-                    <h1>Creations</h1>
+                <div class="col-md-10 offset-md-1">
+                    <!--<h1>Créations</h1>-->
                     <h2>Spectateur(s) - un accident de theatre</h2>
+                    <p>Apparemment construite sur une série d'incidents et d'improvisations, cette tragi-comédie relate une fable contemporaine, quelque part entre l'Inde, New-York et la France.<br>
+                        Quête farfelue nous invitant à réagir aux accidents de tous les jours, elle pose une question essentielle : sommes nous acteurs ou spectateurs de nos vies ?<br>
+                        SPECTATEUR(S) tente de renouer avec la fable, ni toute drôle, ni toute noire. On y cultive une forme de rire entre prise de conscience et force de libération.<br>
+                        </p>
+                        <br>
+                        <h3>Équipe de création</h3>
+                        <p>
+                        Écriture, mise en scène &amp; costumes / Alice Tabart<br>
+                        Interprétation / Simon Giesbert, Coline Lubin, Olivier Marchepoil ou Lucas Lemauff &amp; Elsa Sanchez<br>
+                        Chorégraphies / Joël Sitbon &amp; Elsa Sanchez<br>
+                        Création musicale / Simon Giesbert<br>
+                        Création lumière / Damien Peray<br>
+                        </p>
+
+                        <h3>Production</h3>
+                        <p>
+                        Une production de l’Association Mesdames A, avec le soutien de la Commission Européenne (PEJA 2013), et du Conseil Général de la Haute-Garonne (aide à la création),en partenariat avec le CIAM, Mix’art Myrys et l’association ACT.<br>
+                        <br>
+                        Plus de details sur l’equipe et la production dans:<br>
+                        <ul>
+                            <li>- le Dossier de communication</li>
+                            <li>- la Revue de presse</li>
+                            <li>- la liste des dates passees</li>
+                        </ul>
+
+                    </p>
+
+
                     <h2>Le Satyre</h2>
                     <h2>Le Monologue d'une tueuse</h2>
                     <h2>Le Satyre</h2>
-                    <h2>Le Monologue d'une tueuse</h2><h2>Le Satyre</h2>
-                    <h2>Le Monologue d'une tueuse</h2><h2>Le Satyre</h2>
-                    <h2>Le Monologue d'une tueuse</h2><h2>Le Satyre</h2>
-                    <h2>Le Monologue d'une tueuse</h2><h2>Le Satyre</h2>
-                    <h2>Le Monologue d'une tueuse</h2><h2>Le Satyre</h2>
-                    <h2>Le Monologue d'une tueuse</h2>
+                    
+
                 </div>
             </div>
         </div>
     </section>
- <!-- Creation Section -->
+    <!-- Creation Section -->
     <section id="compagnie" class="compagnie-section">
         <div class="container">
             <div class="row">
@@ -137,32 +173,41 @@
                     <h2>Le Satyre</h2>
                     <h2>Le Monologue d'une tueuse</h2><h2>Le Satyre</h2>
                     <h2>Le Monologue d'une tueuse</h2><h2>Le Satyre</h2>
-                    <h2>Le Monologue d'une tueuse</h2><h2>Le Satyre</h2>
-                    <h2>Le Monologue d'une tueuse</h2><h2>Le Satyre</h2>
-                    <h2>Le Monologue d'une tueuse</h2><h2>Le Satyre</h2>
-                    <h2>Le Monologue d'une tueuse</h2>
+
                 </div>
             </div>
         </div>
     </section>
-     <!-- Creation Section -->
+    <!-- Creation Section -->
     <section id="contact" class="contact-section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                   <h1>Contact</h1>
-                   <h2>Le Monologue d'une tueuse</h2>
-                    <h2>Le Satyre</h2>
-                    <h2>Le Monologue d'une tueuse</h2><h2>Le Satyre</h2>
-                    <h2>Le Monologue d'une tueuse</h2><h2>Le Satyre</h2>
-                    <h2>Le Monologue d'une tueuse</h2><h2>Le Satyre</h2>
-                    <h2>Le Monologue d'une tueuse</h2><h2>Le Satyre</h2>
-                    <h2>Le Monologue d'une tueuse</h2><h2>Le Satyre</h2>
-                    <h2>Le Monologue d'une tueuse</h2>
-                </div>
-            </div>
-        </div>
-    </section>
+                 <h1>Contact</h1>
+                 <h2>Le Monologue d'une tueuse</h2>
+                 <h2>Le Satyre</h2>
+                 <h2>Le Monologue d'une tueuse</h2><h2>Le Satyre</h2>
+                 <h2>Le Monologue d'une tueuse</h2><h2>Le Satyre</h2>
+                 <h2>Le Monologue d'une tueuse</h2><h2>Le Satyre</h2>
+                 <h2>Le Monologue d'une tueuse</h2><h2>Le Satyre</h2>
+                 <h2>Le Monologue d'une tueuse</h2><h2>Le Satyre</h2>
+                 <h2>Le Monologue d'une tueuse</h2>
+             </div>
+         </div>
+     </div>
+ </section>
+
+
+ <!-- Bootstrap Core JavaScript -->
+ <script src="js/bootstrap.min.js"></script>
+
+
+
+ <!-- Scrolling Nav JavaScript -->
+ <script src="js/jquery.easing.min.js"></script>
+ <script src="js/scrolling-nav.js"></script>
 
 </body>
+
+
 </html>
