--- a/index.html
+++ b/index.html
@@ -3,209 +3,227 @@
 
 <head>
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Site de la compagnie Mesdames A, compagnie de théâtre contemporain basée à Toulouse. Dirigée par Alice Tabart.">
-    <meta name="author" content="Alice et Gilles Tabart">
-    <meta name="robots" content="index, follow">
-    <meta name="keywords" content="théâtre, contemporain, Toulouse, Alice Tabart, spectacle, danse, compagnie, mesdames a">
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="Site de la compagnie Mesdames A, compagnie de théâtre contemporain basée à Toulouse. Dirigée par Alice Tabart.">
+<meta name="author" content="Alice et Gilles Tabart">
+<meta name="robots" content="index, follow">
+<meta name="keywords" content="théâtre, contemporain, Toulouse, Alice Tabart, spectacle, danse, compagnie, mesdames a">
 
-    <title>Compagnie Mesdames A - Théâtre contemporain Toulouse</title>
+<title>Compagnie Mesdames A - Théâtre contemporain Toulouse</title>
 
-    <!-- Bootstrap CSS and JS 
-   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"> 
-   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
-   <link href="css/bootstrap.min.css" rel="stylesheet">
-
-
-
-   <!-- Custom CSS -->
-   <link href="css/scrolling-nav.css" rel="stylesheet">
-
-   <!-- jQuery -->
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.js"></script>
-     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> 
-
- -->
+<!-- Bootstrap CSS and JS 
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"> 
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
+<link href="css/bootstrap.min.css" rel="stylesheet">
 
 
- <!-- Fonts stuff -->
- <link rel="stylesheet" href="fonts/font-awesome-4.6.3/css/font-awesome.min.css">
- <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+
+<!-- Custom CSS -->
+<link href="css/scrolling-nav.css" rel="stylesheet">
+<link href="css/the-big-picture.css" rel="stylesheet">
+
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.js"></script> 
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script> 
+
+<!-- Bootstrap Core JavaScript -->
+<script src="js/bootstrap.min.js"></script>
+
+<!-- Scrolling Nav JavaScript -->
+
+<script src="js/jquery.easing.min.js"></script>
+<script src="js/scrolling-nav.js"></script>
+
+<!-- Fonts stuff -->
+<link rel="stylesheet" href="fonts/font-awesome-4.6.3/css/font-awesome.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 
 
- <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
- <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--
-    <[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <[endif]>
--->
+<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+<!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+<![endif]-->
 
 </head>
 
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-        <div class="container">
-            <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Mesdames a</a>
-            </div>
+<!-- Navigation -->
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container">
+        <div class="navbar-header page-scroll">
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse navbar-ex1-collapse">
-                <ul class="nav navbar-nav">
-                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-                    <li class="hidden">
-                        <a class="page-scroll" href="#page-top"></a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#home">Home</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#actu">Actualité</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#creations">Créations</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#compagnie">La Compagnie</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
-                    </li>
-                </ul>
+         <div class="container">
+            <div class="row">
+                <div class="col-lg-3">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand page-scroll" href="#page-top" title="logo Mesdames a">
+                        <img id="logo" src="media/image/LogoCompagnieMa.svg">
+                    </a>
+                </div>
+
+
+                <div class="col-lg-9">
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse navbar-ex1-collapse">
+                        <ul class="nav navbar-nav">
+                            <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+                            <li class="hidden">
+                                <a class="page-scroll link-nav" href="#page-top"></a>
+                            </li>
+                            <li>
+                                <a class="page-scroll link-nav" class="active" href="#home">Mesdames a</a>
+                            </li>
+                            <li>
+                                <a class="page-scroll link-nav" href="#actu">Actualités</a>
+                            </li>
+                            <li>
+                                <a class="page-scroll link-nav" href="#creations">Créations</a>
+                            </li>
+                            <li>
+                                <a class="page-scroll link-nav" href="#compagnie">La Compagnie</a>
+                            </li>
+                            <li>
+                                <a class="page-scroll link-nav" href="#contact">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- /.navbar-collapse -->
+                </div>
             </div>
-            <!-- /.navbar-collapse -->
+            <!-- /.row -->
         </div>
         <!-- /.container -->
     </nav>
 
-    <!-- Home Section -->
-    <section id="home" class="home-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
+<!-- Home Section -->
+<section id="home" class="home-section">
+    <div class="container">
+        <div class="row banner">
+            <div class="col-lg-12">
+                <div class="row" >
 
-                    <h1>Welcome</h1>
-                    <p><strong>Mesdames a</strong> Make sure to include the page-scroll</code> class and set the link target to a corresponding ID on the page.</p>
-                    <!-- <a class="btn btn-default page-scroll" href="#about">Click Me to Scroll Down!</a>-->
+                    <div class="col-lg-1">
+
+                    </div>
+                    <div class="col-lg-7">
+                        <p class="intro-text">
+                            La Cie Mesdames A aime faire discuter jeu, danse et musique dans chacune de ses créations.<br>
+                            <br>
+                            Ses experimentations interrogent la place de l'individu dans la société contemporaine.
+                        </p>
+                    </div>
+                    <div class="col-lg-3 button">
+                        <a class="btn btn-default"> Nous soutenir</a>
+                    </div>
+                    <div class="col-lg-1">
+
+                    </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
-    <!-- Actualites Section -->
-    <section id="actu" class="actu-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1>Actualites</h1>
-                    <h2>Prochaines dates</h2>
-                </div>
+<!-- Actualites Section -->
+<section id="actu" class="actu-section">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <h1>Actualites</h1>
+                <h2>Prochaines dates</h2>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
-    <!-- Creation Section -->
-    <section id="creations" class="creations-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-10 offset-md-1">
-                    <!--<h1>Créations</h1>-->
-                    <h2>Spectateur(s) - un accident de theatre</h2>
-                    <p>Apparemment construite sur une série d'incidents et d'improvisations, cette tragi-comédie relate une fable contemporaine, quelque part entre l'Inde, New-York et la France.<br>
-                        Quête farfelue nous invitant à réagir aux accidents de tous les jours, elle pose une question essentielle : sommes nous acteurs ou spectateurs de nos vies ?<br>
-                        SPECTATEUR(S) tente de renouer avec la fable, ni toute drôle, ni toute noire. On y cultive une forme de rire entre prise de conscience et force de libération.<br>
-                        </p>
-                        <br>
-                        <h3>Équipe de création</h3>
-                        <p>
-                        Écriture, mise en scène &amp; costumes / Alice Tabart<br>
-                        Interprétation / Simon Giesbert, Coline Lubin, Olivier Marchepoil ou Lucas Lemauff &amp; Elsa Sanchez<br>
-                        Chorégraphies / Joël Sitbon &amp; Elsa Sanchez<br>
-                        Création musicale / Simon Giesbert<br>
-                        Création lumière / Damien Peray<br>
-                        </p>
-
-                        <h3>Production</h3>
-                        <p>
-                        Une production de l’Association Mesdames A, avec le soutien de la Commission Européenne (PEJA 2013), et du Conseil Général de la Haute-Garonne (aide à la création),en partenariat avec le CIAM, Mix’art Myrys et l’association ACT.<br>
-                        <br>
-                        Plus de details sur l’equipe et la production dans:<br>
-                        <ul>
-                            <li>- le Dossier de communication</li>
-                            <li>- la Revue de presse</li>
-                            <li>- la liste des dates passees</li>
-                        </ul>
-
+<!-- Creation Section -->
+<section id="creations" class="creations-section">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-10 offset-md-1">
+                <!--<h1>Créations</h1>-->
+                <h2>Spectateur(s) - un accident de theatre</h2>
+                <p>Apparemment construite sur une série d'incidents et d'improvisations, cette tragi-comédie relate une fable contemporaine, quelque part entre l'Inde, New-York et la France.<br>
+                    Quête farfelue nous invitant à réagir aux accidents de tous les jours, elle pose une question essentielle : sommes nous acteurs ou spectateurs de nos vies ?<br>
+                    SPECTATEUR(S) tente de renouer avec la fable, ni toute drôle, ni toute noire. On y cultive une forme de rire entre prise de conscience et force de libération.<br>
+                    </p>
+                    <br>
+                    <h3>Équipe de création</h3>
+                    <p>
+                    Écriture, mise en scène &amp; costumes / Alice Tabart<br>
+                    Interprétation / Simon Giesbert, Coline Lubin, Olivier Marchepoil ou Lucas Lemauff &amp; Elsa Sanchez<br>
+                    Chorégraphies / Joël Sitbon &amp; Elsa Sanchez<br>
+                    Création musicale / Simon Giesbert<br>
+                    Création lumière / Damien Peray<br>
                     </p>
 
+                    <h3>Production</h3>
+                    <p>
+                    Une production de l’Association Mesdames A, avec le soutien de la Commission Européenne (PEJA 2013), et du Conseil Général de la Haute-Garonne (aide à la création),en partenariat avec le CIAM, Mix’art Myrys et l’association ACT.<br>
+                    <br>
+                    Plus de details sur l’equipe et la production dans:<br>
+                    <ul>
+                        <li>- le Dossier de communication</li>
+                        <li>- la Revue de presse</li>
+                        <li>- la liste des dates passees</li>
+                    </ul>
 
-                    <h2>Le Satyre</h2>
-                    <h2>Le Monologue d'une tueuse</h2>
-                    <h2>Le Satyre</h2>
-                    
+                </p>
 
-                </div>
+
+                <h2>Le Satyre</h2>
+                <h2>Le Monologue d'une tueuse</h2>
+                <h2>Le Satyre</h2>
+                
+
             </div>
         </div>
-    </section>
-    <!-- Creation Section -->
-    <section id="compagnie" class="compagnie-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1>Compagnie</h1>
-                    <h1>Les acteurs</h1>
-                    <h2>Le Monologue d'une tueuse</h2>
-                    <h2>Le Satyre</h2>
-                    <h2>Le Monologue d'une tueuse</h2><h2>Le Satyre</h2>
-                    <h2>Le Monologue d'une tueuse</h2><h2>Le Satyre</h2>
+    </div>
+</section>
+<!-- Creation Section -->
+<section id="compagnie" class="compagnie-section">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <h1>Compagnie</h1>
+                <h1>Les acteurs</h1>
+                <h2>Le Monologue d'une tueuse</h2>
+                <h2>Le Satyre</h2>
+                <h2>Le Monologue d'une tueuse</h2><h2>Le Satyre</h2>
+                <h2>Le Monologue d'une tueuse</h2><h2>Le Satyre</h2>
 
-                </div>
             </div>
         </div>
-    </section>
-    <!-- Creation Section -->
-    <section id="contact" class="contact-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                 <h1>Contact</h1>
-                 <h2>Le Monologue d'une tueuse</h2>
-                 <h2>Le Satyre</h2>
-                 <h2>Le Monologue d'une tueuse</h2><h2>Le Satyre</h2>
-                 <h2>Le Monologue d'une tueuse</h2><h2>Le Satyre</h2>
-                 <h2>Le Monologue d'une tueuse</h2><h2>Le Satyre</h2>
-                 <h2>Le Monologue d'une tueuse</h2><h2>Le Satyre</h2>
-                 <h2>Le Monologue d'une tueuse</h2><h2>Le Satyre</h2>
-                 <h2>Le Monologue d'une tueuse</h2>
-             </div>
+    </div>
+</section>
+<!-- Creation Section -->
+<section id="contact" class="contact-section">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+             <h1>Contact</h1>
+             <h2>Le Monologue d'une tueuse</h2>
+             <h2>Le Satyre</h2>
+             <h2>Le Monologue d'une tueuse</h2><h2>Le Satyre</h2>
+             <h2>Le Monologue d'une tueuse</h2><h2>Le Satyre</h2>
+             <h2>Le Monologue d'une tueuse</h2><h2>Le Satyre</h2>
+             <h2>Le Monologue d'une tueuse</h2><h2>Le Satyre</h2>
+             <h2>Le Monologue d'une tueuse</h2><h2>Le Satyre</h2>
+             <h2>Le Monologue d'une tueuse</h2>
          </div>
      </div>
- </section>
-
-
- <!-- Bootstrap Core JavaScript -->
- <script src="js/bootstrap.min.js"></script>
-
-
-
- <!-- Scrolling Nav JavaScript -->
- <script src="js/jquery.easing.min.js"></script>
- <script src="js/scrolling-nav.js"></script>
+ </div>
+</section>
 
 </body>
 
